--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,67 @@
+/*
+                                                                  
+                                       .::::::::::-===+++++++++++++++=:.                            
+                           ..         .%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%+..                        
+                        .-+#*.        .@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%=.                       
+                      :=@@@@@=        .@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@=.                      
+                    .+@@@@@@@@*-      .@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@+                      
+                   .+@@@@@@@@@@@#:    .%@@@@@@@@@@@@@@@@%%#######%@@@@@@@@@@@@:                     
+                  .-@@@@@=.#@@@@@@:    .::----------:.             .-*@@@@@@@@@.                    
+                  .#@@@=.  :*%@@@@#.                                  .+@@@@@@@-                    
+                  .@@@*       :%@@@=                                    +@@@@@@*                    
+                  -@@@-        .@@@#.                                   .#@@@@@@.                   
+                  =@@@.         #@@%.                                    .@@@@@@:                   
+                  -@@@-         *@@%.                                    .#@@@@@-                   
+                  .@@@%:      .=@@@#.                                     =@@@@@=                   
+                  .#@@@@*-::-+%@@@@=                                      :@@@@@=                   
+                   .@@@@@@@@@@@@@@*.                                      .@@@@@=                   
+                    :#@@@@@@@@@@@+.                                       .@@@@@=                   
+                      -%@@@@@@%+.                                         .@@@@@=                   
+                       .:----:.                                           .@@@@@=                   
+                                                                          .@@@@@=                   
+                                                                          .@@@@@=                   
+                       .##.                                               .@@@@@=                   
+                       -@@=                                               .@@@@@=                   
+                       -@@+                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                               .@@@@@=                   
+                       -@@*                                                +%%%%.                   
+                       -@@*                                                .....                    
+                       -@@*                                                                         
+                       -@@*                                               ....                      
+                       -@@*                                             .-*##=                      
+                       -@@*                                          .:+@@@@@@.                     
+                       -@@*                                         .+@@@@@@@@#=.                   
+                       :@@%                                        .*@@@@@@@@@@@@*.                 
+                       .@@@.                                       +@@@@@@++@@@@@@#.                
+                       .%@@=                                      .@@@@#-. :%@@@@@@#.               
+                        +@@#.                                     +@@@%.    .:=#@@@@-               
+                        .@@@*.                                   .%@@@-.       .+@@@*               
+                         =@@@+.                                  .@@@@.         :@@@@               
+                         .#@@@%.....            ..............   .@@@@.         .%@@@               
+                          .*@@@@@%#*++++++++++**##%%%%%%%%%%%=   .%@@@-         .@@@@.              
+                           .+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@.   +@@@%:.     .:+@@@%.              
+                            ..+@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*.   .@@@@@#=..:+%@@@@@+               
+                                .:=++++++++++++==--:.......::.     =@@@@@@@@@@@@@@@%.               
+                                                                    =@@@@@@@@@@@@@#.                
+                                                                    .:+@@@@@@@@@*-.                 
+                                                                       .=*###+-.                    
+                                                                         ....                       
+       
+*/
 body {
   font-family: Arial, sans-serif;
   margin: 0;
